src_old/objects/ServiceQuestionDefinedResponse__c.object
<CustomObject>
    <description>Service Question Defined Response relates a Question Defined Response to a Service Question. Service Question Defined Response is related to Service Question and Project Service Question Defined Response.</description>
    <fields>
        <fullName>CanRemove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefinedResponseText__c</fullName>
        <description>The text that will be shown for this response</description>
        <formula>QuestionDefinedResponse__r.DefinedResponseText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The text that will be shown for this response</inlineHelpText>
        <label>Defined Response Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndofQuestions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End of Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JumpToAction__c</fullName>
        <label>JumpTo Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QUESTION</fullName>
                </value>
                <value>
                    <fullName>CONTINUE</fullName>
                </value>
                <value>
                    <fullName>RETURN</fullName>
                </value>
                <value>
                    <fullName>ENDOFSURVEY</fullName>
                    <isActive>false</isActive>
                    <label>ENDOFSURVEY</label>
                </value>
                <value>
                    <fullName>NEXTTARGET</fullName>
                    <isActive>false</isActive>
                    <label>NEXTTARGET</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JumpToQuestion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Jump To Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Service Question Defined Responses</relationshipLabel>
        <relationshipName>Service_Question_Defined_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionDefinedResponse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question Defined Response</label>
        <referenceTo>QuestionDefinedResponse__c</referenceTo>
        <relationshipLabel>Service Question Defined Responses</relationshipLabel>
        <relationshipName>Service_Questions_Jump</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceQuestion__c</fullName>
        <label>Service Question</label>
        <referenceTo>ServiceQuestion__c</referenceTo>
        <relationshipLabel>Service Question Defined Responses</relationshipLabel>
        <relationshipName>Service_Questions_Jump</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Question Defined Response</label>
    <nameField>
        <displayFormat>SQDR-{00000000}</displayFormat>
        <label>Service Question Defined Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Question Defined Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>